# Microservicios-gestionEmpresarial

./: .env  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  start.sh
AgenteConGemini/: .env  Dockerfile  README.md  pyproject.toml  quickstart.sh  run.py  start.sh  start_api.sh  test_api.py
AgenteConGemini/agentecongemini/: __init__.py  api.py  auth.py  client.py  main.py  server.py
AgenteConGemini/agentecongemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
api-gateway/src/: index.ts
api-gateway/src/config/: cors.ts  rateLimit.ts
api-gateway/src/middleware/: auth.ts  errorHandler.ts  logger.ts  roles.ts
api-gateway/src/routes/: index.ts
auth-service/: .env.example  Dockerfile  README.md  package.json
auth-service/src/: index.ts
auth-service/src/config/: cors.ts  database.ts
auth-service/src/controllers/: AuthController.ts
auth-service/src/middleware/: auth.ts  role.ts  validation.ts
auth-service/src/models/: Token.ts  User.ts
auth-service/src/routes/: authRoutes.ts
auth-service/src/scripts/: createAdmin.ts  migrate.ts
auth-service/src/types/: index.ts
auth-service/src/utils/: email.ts  hash.ts  jwt.ts
react-chat-app/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
react-chat-app/src/: App.css  App.tsx
react-chat-app/src/components/: ProtectedRoute.tsx
task-service/: Dockerfile  package-lock.json  package.json
task-service/src/: index.ts
(+75 files in other folders)
